ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong            # This is the app as declared in the deployment.
  ports:
    - port: 2346               # port exposed for internal access
      protocol: TCP
      targetPort: 3001         # the target port where container(app) listening
